# src/main/java/com/example/bankcards/entity/Card.java
@@ -54,6 +54,10 @@ public class Card {
     @Column(name = "user_id", nullable = false)
     private Long userId;
 
+    @NotNull
+    @Column(name = "block_requested", nullable = false)
+    private boolean blockRequested;
+
     public String getMaskedNumber() {
         return "**** **** **** " + last4;
     }
